NetBSD Problem Report #50750

From www@NetBSD.org  Tue Feb  2 10:41:52 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B0EBB7A0EB
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  2 Feb 2016 10:41:52 +0000 (UTC)
Message-Id: <20160202104151.DCEA37AC9C@mollari.NetBSD.org>
Date: Tue,  2 Feb 2016 10:41:51 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.bin/unexpand/unexpand.c:177]: (style) Array index 'n' is used before limits check.
X-Send-Pr-Version: www-1.0

>Number:         50750
>Category:       bin
>Synopsis:       src/usr.bin/unexpand/unexpand.c:177]: (style) Array index 'n' is used before limits check.
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 02 10:45:00 +0000 2016
>Closed-Date:    Wed Feb 03 08:18:50 +0000 2016
>Last-Modified:  Wed Feb 03 08:18:50 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160131
>Organization:
>Environment:
>Description:
Source code is

           for (n = 0; tabstops[n] <= ocol && n < nstops; n++)

Maybe

           for (n = 0; (n < tabstops) && (tabstops[n] <= ocol); n++)

might be better code.


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50750 CVS commit: src/usr.bin/unexpand
Date: Wed, 3 Feb 2016 00:32:14 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Feb  3 05:32:14 UTC 2016

 Modified Files:
 	src/usr.bin/unexpand: unexpand.c

 Log Message:
 PR/50750: David Binderman: Check bounds before dereference


 To generate a diff of this commit:
 cvs rdiff -u -r1.14 -r1.15 src/usr.bin/unexpand/unexpand.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 03 Feb 2016 08:18:50 +0000
State-Changed-Why:
Fixed by christos, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.