PR/50750: David Binderman: Check bounds before dereference